// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults should be rendered correctly when column numbers specified 1`] = `
<div
  className="mb-3"
>
  <MasonryGrid
    columnsNum={1}
    items={
      Array [
        Object {
          "content": Object {
            "_score": 298.40634,
            "analytics": Object {
              "onclick": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=3o6UBlHJQT19wSgJQk&action_type=CLICK",
              },
              "onload": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=3o6UBlHJQT19wSgJQk&action_type=SEEN",
              },
              "onsent": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=3o6UBlHJQT19wSgJQk&action_type=SENT",
              },
            },
            "bitly_gif_url": "https://gph.is/1ZiPWOg",
            "bitly_url": "https://gph.is/1ZiPWOg",
            "content_url": "",
            "embed_url": "https://giphy.com/embed/3o6UBlHJQT19wSgJQk",
            "id": "3o6UBlHJQT19wSgJQk",
            "images": Object {
              "480w_still": Object {
                "height": "360",
                "url": "https://media4.giphy.com/media/3o6UBlHJQT19wSgJQk/480w_s.jpg",
                "width": "480",
              },
              "downsized": Object {
                "height": "187",
                "size": "1551019",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-downsized.gif",
                "width": "250",
              },
              "downsized_large": Object {
                "height": "240",
                "size": "2512686",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.gif",
                "width": "320",
              },
              "downsized_medium": Object {
                "height": "240",
                "size": "2512686",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.gif",
                "width": "320",
              },
              "downsized_small": Object {
                "height": "240",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-downsized-small.mp4",
                "mp4_size": "85141",
                "width": "320",
              },
              "downsized_still": Object {
                "height": "187",
                "size": "20803",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-downsized_s.gif",
                "width": "250",
              },
              "fixed_height": Object {
                "height": "200",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200.mp4",
                "mp4_size": "48732",
                "size": "1763793",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200.webp",
                "webp_size": "416708",
                "width": "267",
              },
              "fixed_height_downsampled": Object {
                "height": "200",
                "size": "163498",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200_d.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200_d.webp",
                "webp_size": "63158",
                "width": "267",
              },
              "fixed_height_small": Object {
                "height": "100",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100.mp4",
                "mp4_size": "20844",
                "size": "516054",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100.webp",
                "webp_size": "158166",
                "width": "133",
              },
              "fixed_height_small_still": Object {
                "height": "100",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100_s.gif",
                "width": "133",
              },
              "fixed_height_still": Object {
                "height": "200",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200_s.gif",
                "width": "267",
              },
              "fixed_width": Object {
                "height": "150",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w.mp4",
                "mp4_size": "33202",
                "size": "1028723",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w.webp",
                "webp_size": "273852",
                "width": "200",
              },
              "fixed_width_downsampled": Object {
                "height": "150",
                "size": "93903",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w_d.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w_d.webp",
                "webp_size": "39922",
                "width": "200",
              },
              "fixed_width_small": Object {
                "height": "75",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w.mp4",
                "mp4_size": "14167",
                "size": "339068",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w.webp",
                "webp_size": "108598",
                "width": "100",
              },
              "fixed_width_small_still": Object {
                "height": "75",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w_s.gif",
                "width": "100",
              },
              "fixed_width_still": Object {
                "height": "150",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w_s.gif",
                "width": "200",
              },
              "looping": Object {
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-loop.mp4",
                "mp4_size": "852512",
              },
              "original": Object {
                "frames": "64",
                "height": "240",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.mp4",
                "mp4_size": "125289",
                "size": "2512686",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.webp",
                "webp_size": "621576",
                "width": "320",
              },
              "original_mp4": Object {
                "height": "360",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.mp4",
                "mp4_size": "125289",
                "width": "480",
              },
              "original_still": Object {
                "height": "240",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy_s.gif",
                "width": "320",
              },
              "preview": Object {
                "height": "192",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-preview.mp4",
                "mp4_size": "23776",
                "width": "256",
              },
              "preview_gif": Object {
                "height": "99",
                "size": "48051",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-preview.gif",
                "width": "132",
              },
              "preview_webp": Object {
                "height": "184",
                "size": "49824",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-preview.webp",
                "width": "245",
              },
            },
            "import_datetime": "2016-01-12 20:15:44",
            "is_sticker": 0,
            "rating": "g",
            "slug": "k-dancing-3o6UBlHJQT19wSgJQk",
            "source": "",
            "source_post_url": "",
            "source_tld": "",
            "title": "k GIF",
            "trending_datetime": "0000-00-00 00:00:00",
            "type": "gif",
            "url": "https://giphy.com/gifs/k-dancing-3o6UBlHJQT19wSgJQk",
            "username": "",
          },
          "height": 150,
        },
        Object {
          "content": Object {
            "_score": 285.9092,
            "analytics": Object {
              "onclick": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=RLCSAx4DQEJb2&action_type=CLICK",
              },
              "onload": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=RLCSAx4DQEJb2&action_type=SEEN",
              },
              "onsent": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=RLCSAx4DQEJb2&action_type=SENT",
              },
            },
            "bitly_gif_url": "https://gph.is/1ZYR9g1",
            "bitly_url": "https://gph.is/1ZYR9g1",
            "content_url": "",
            "embed_url": "https://giphy.com/embed/RLCSAx4DQEJb2",
            "id": "RLCSAx4DQEJb2",
            "images": Object {
              "480w_still": Object {
                "height": "270",
                "url": "https://media0.giphy.com/media/RLCSAx4DQEJb2/480w_s.jpg",
                "width": "480",
              },
              "downsized": Object {
                "height": "140",
                "size": "1021046",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-downsized.gif",
                "width": "250",
              },
              "downsized_large": Object {
                "height": "288",
                "size": "6511744",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-downsized-large.gif",
                "width": "512",
              },
              "downsized_medium": Object {
                "height": "230",
                "size": "3871669",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-downsized-medium.gif",
                "width": "409",
              },
              "downsized_small": Object {
                "height": "288",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-downsized-small.mp4",
                "mp4_size": "86923",
                "width": "512",
              },
              "downsized_still": Object {
                "height": "140",
                "size": "28302",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-downsized_s.gif",
                "width": "250",
              },
              "fixed_height": Object {
                "height": "200",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200.mp4",
                "mp4_size": "42596",
                "size": "5449703",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200.webp",
                "webp_size": "744010",
                "width": "356",
              },
              "fixed_height_downsampled": Object {
                "height": "200",
                "size": "255681",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200_d.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200_d.webp",
                "webp_size": "28480",
                "width": "356",
              },
              "fixed_height_small": Object {
                "height": "100",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100.mp4",
                "mp4_size": "19023",
                "size": "1403753",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100.webp",
                "webp_size": "295778",
                "width": "178",
              },
              "fixed_height_small_still": Object {
                "height": "100",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100_s.gif",
                "width": "178",
              },
              "fixed_height_still": Object {
                "height": "200",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200_s.gif",
                "width": "356",
              },
              "fixed_width": Object {
                "height": "113",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w.mp4",
                "mp4_size": "19139",
                "size": "1608695",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w.webp",
                "webp_size": "348174",
                "width": "200",
              },
              "fixed_width_downsampled": Object {
                "height": "113",
                "size": "83765",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w_d.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w_d.webp",
                "webp_size": "13406",
                "width": "200",
              },
              "fixed_width_small": Object {
                "height": "56",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100w.mp4",
                "mp4_size": "10590",
                "size": "421229",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100w.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100w.webp",
                "webp_size": "139152",
                "width": "100",
              },
              "fixed_width_small_still": Object {
                "height": "56",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100w_s.gif",
                "width": "100",
              },
              "fixed_width_still": Object {
                "height": "113",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w_s.gif",
                "width": "200",
              },
              "looping": Object {
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-loop.mp4",
                "mp4_size": "159822",
              },
              "original": Object {
                "frames": "170",
                "height": "288",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy.mp4",
                "mp4_size": "55056",
                "size": "11597306",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy.webp",
                "webp_size": "1311256",
                "width": "512",
              },
              "original_mp4": Object {
                "height": "270",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy.mp4",
                "mp4_size": "55056",
                "width": "480",
              },
              "original_still": Object {
                "height": "288",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy_s.gif",
                "width": "512",
              },
              "preview": Object {
                "height": "288",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-preview.mp4",
                "mp4_size": "30164",
                "width": "512",
              },
              "preview_gif": Object {
                "height": "78",
                "size": "44428",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-preview.gif",
                "width": "139",
              },
              "preview_webp": Object {
                "height": "179",
                "size": "48772",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-preview.webp",
                "width": "318",
              },
            },
            "import_datetime": "2016-01-12 20:53:57",
            "is_sticker": 0,
            "rating": "g",
            "slug": "k-don-RLCSAx4DQEJb2",
            "source": "https://www.reddit.com/r/K_gifs/comments/3rg30r/don_k/",
            "source_post_url": "https://www.reddit.com/r/K_gifs/comments/3rg30r/don_k/",
            "source_tld": "www.reddit.com",
            "title": "k GIF",
            "trending_datetime": "0000-00-00 00:00:00",
            "type": "gif",
            "url": "https://giphy.com/gifs/k-don-RLCSAx4DQEJb2",
            "username": "",
          },
          "height": 113,
        },
        Object {
          "content": Object {
            "_score": 282.85458,
            "analytics": Object {
              "onclick": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=e63jUdmBlfmec&action_type=CLICK",
              },
              "onload": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=e63jUdmBlfmec&action_type=SEEN",
              },
              "onsent": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=e63jUdmBlfmec&action_type=SENT",
              },
            },
            "bitly_gif_url": "https://gph.is/1ZYRbVc",
            "bitly_url": "https://gph.is/1ZYRbVc",
            "content_url": "",
            "embed_url": "https://giphy.com/embed/e63jUdmBlfmec",
            "id": "e63jUdmBlfmec",
            "images": Object {
              "480w_still": Object {
                "height": "387",
                "url": "https://media1.giphy.com/media/e63jUdmBlfmec/480w_s.jpg",
                "width": "480",
              },
              "downsized": Object {
                "height": "201",
                "size": "1179164",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-downsized.gif",
                "width": "250",
              },
              "downsized_large": Object {
                "height": "258",
                "size": "5999328",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy.gif",
                "width": "320",
              },
              "downsized_medium": Object {
                "height": "258",
                "size": "2864521",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-downsized-medium.gif",
                "width": "320",
              },
              "downsized_small": Object {
                "height": "258",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-downsized-small.mp4",
                "mp4_size": "110309",
                "width": "320",
              },
              "downsized_still": Object {
                "height": "201",
                "size": "23859",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-downsized_s.gif",
                "width": "250",
              },
              "fixed_height": Object {
                "height": "200",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/200.mp4",
                "mp4_size": "51073",
                "size": "3484959",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/200.webp",
                "webp_size": "1033918",
                "width": "248",
              },
              "fixed_height_downsampled": Object {
                "height": "200",
                "size": "127673",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200_d.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/200_d.webp",
                "webp_size": "36662",
                "width": "248",
              },
              "fixed_height_small": Object {
                "height": "100",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/100.mp4",
                "mp4_size": "24324",
                "size": "967796",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/100.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/100.webp",
                "webp_size": "404842",
                "width": "124",
              },
              "fixed_height_small_still": Object {
                "height": "100",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/100_s.gif",
                "width": "124",
              },
              "fixed_height_still": Object {
                "height": "200",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200_s.gif",
                "width": "248",
              },
              "fixed_width": Object {
                "height": "161",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/200w.mp4",
                "mp4_size": "51315",
                "size": "2213033",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200w.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/200w.webp",
                "webp_size": "778462",
                "width": "200",
              },
              "fixed_width_downsampled": Object {
                "height": "161",
                "size": "81345",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200w_d.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/200w_d.webp",
                "webp_size": "27734",
                "width": "200",
              },
              "fixed_width_small": Object {
                "height": "81",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/100w.mp4",
                "mp4_size": "27353",
                "size": "648179",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/100w.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/100w.webp",
                "webp_size": "300596",
                "width": "100",
              },
              "fixed_width_small_still": Object {
                "height": "81",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/100w_s.gif",
                "width": "100",
              },
              "fixed_width_still": Object {
                "height": "161",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200w_s.gif",
                "width": "200",
              },
              "looping": Object {
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-loop.mp4",
                "mp4_size": "304086",
              },
              "original": Object {
                "frames": "168",
                "height": "258",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy.mp4",
                "mp4_size": "149290",
                "size": "5999328",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy.webp",
                "webp_size": "1581878",
                "width": "320",
              },
              "original_mp4": Object {
                "height": "386",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy.mp4",
                "mp4_size": "149290",
                "width": "480",
              },
              "original_still": Object {
                "height": "258",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy_s.gif",
                "width": "320",
              },
              "preview": Object {
                "height": "258",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-preview.mp4",
                "mp4_size": "27198",
                "width": "320",
              },
              "preview_gif": Object {
                "height": "98",
                "size": "47857",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-preview.gif",
                "width": "122",
              },
              "preview_webp": Object {
                "height": "184",
                "size": "48450",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-preview.webp",
                "width": "228",
              },
            },
            "import_datetime": "2016-01-12 20:54:08",
            "is_sticker": 0,
            "rating": "g",
            "slug": "k-e63jUdmBlfmec",
            "source": "https://www.reddit.com/r/K_gifs/comments/3831sp/it_eksploded/",
            "source_post_url": "https://www.reddit.com/r/K_gifs/comments/3831sp/it_eksploded/",
            "source_tld": "www.reddit.com",
            "title": "k GIF",
            "trending_datetime": "0000-00-00 00:00:00",
            "type": "gif",
            "url": "https://giphy.com/gifs/k-e63jUdmBlfmec",
            "username": "",
          },
          "height": 161,
        },
        Object {
          "content": Object {
            "_score": 280.29596,
            "analytics": Object {
              "onclick": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=behTrfrYhb3iw&action_type=CLICK",
              },
              "onload": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=behTrfrYhb3iw&action_type=SEEN",
              },
              "onsent": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=behTrfrYhb3iw&action_type=SENT",
              },
            },
            "bitly_gif_url": "https://gph.is/1JIMtqu",
            "bitly_url": "https://gph.is/1JIMtqu",
            "content_url": "",
            "embed_url": "https://giphy.com/embed/behTrfrYhb3iw",
            "id": "behTrfrYhb3iw",
            "images": Object {
              "480w_still": Object {
                "height": "260",
                "url": "https://media0.giphy.com/media/behTrfrYhb3iw/480w_s.jpg",
                "width": "480",
              },
              "downsized": Object {
                "height": "135",
                "size": "1129202",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-downsized.gif",
                "width": "250",
              },
              "downsized_large": Object {
                "height": "303",
                "size": "5643470",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-downsized-large.gif",
                "width": "560",
              },
              "downsized_medium": Object {
                "height": "277",
                "size": "4663463",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-downsized-medium.gif",
                "width": "512",
              },
              "downsized_small": Object {
                "height": "340",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-downsized-small.mp4",
                "mp4_size": "175065",
                "width": "629",
              },
              "downsized_still": Object {
                "height": "135",
                "size": "25096",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-downsized_s.gif",
                "width": "250",
              },
              "fixed_height": Object {
                "height": "200",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/200.mp4",
                "mp4_size": "73512",
                "size": "2264846",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/200.webp",
                "webp_size": "891620",
                "width": "369",
              },
              "fixed_height_downsampled": Object {
                "height": "200",
                "size": "263649",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200_d.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/200_d.webp",
                "webp_size": "87124",
                "width": "369",
              },
              "fixed_height_small": Object {
                "height": "100",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/100.mp4",
                "mp4_size": "30272",
                "size": "600352",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/100.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/100.webp",
                "webp_size": "330018",
                "width": "185",
              },
              "fixed_height_small_still": Object {
                "height": "100",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/100_s.gif",
                "width": "185",
              },
              "fixed_height_still": Object {
                "height": "200",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200_s.gif",
                "width": "369",
              },
              "fixed_width": Object {
                "height": "108",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/200w.mp4",
                "mp4_size": "33116",
                "size": "646368",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200w.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/200w.webp",
                "webp_size": "362994",
                "width": "200",
              },
              "fixed_width_downsampled": Object {
                "height": "108",
                "size": "88164",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200w_d.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/200w_d.webp",
                "webp_size": "35400",
                "width": "200",
              },
              "fixed_width_small": Object {
                "height": "54",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/100w.mp4",
                "mp4_size": "14318",
                "size": "183023",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/100w.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/100w.webp",
                "webp_size": "139120",
                "width": "100",
              },
              "fixed_width_small_still": Object {
                "height": "54",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/100w_s.gif",
                "width": "100",
              },
              "fixed_width_still": Object {
                "height": "108",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200w_s.gif",
                "width": "200",
              },
              "looping": Object {
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-loop.mp4",
                "mp4_size": "697963",
              },
              "original": Object {
                "frames": "61",
                "height": "379",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy.mp4",
                "mp4_size": "107548",
                "size": "9161516",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy.webp",
                "webp_size": "2677548",
                "width": "700",
              },
              "original_mp4": Object {
                "height": "258",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy.mp4",
                "mp4_size": "107548",
                "width": "480",
              },
              "original_still": Object {
                "height": "379",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy_s.gif",
                "width": "700",
              },
              "preview": Object {
                "height": "210",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-preview.mp4",
                "mp4_size": "33695",
                "width": "392",
              },
              "preview_gif": Object {
                "height": "72",
                "size": "49615",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-preview.gif",
                "width": "133",
              },
              "preview_webp": Object {
                "height": "98",
                "size": "48988",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-preview.webp",
                "width": "181",
              },
            },
            "import_datetime": "2016-01-12 20:57:32",
            "is_sticker": 0,
            "rating": "g",
            "slug": "k-kindergarten-behTrfrYhb3iw",
            "source": "https://www.reddit.com/r/K_gifs/comments/2eub3p/kindergarten_kop/",
            "source_post_url": "https://www.reddit.com/r/K_gifs/comments/2eub3p/kindergarten_kop/",
            "source_tld": "www.reddit.com",
            "title": "k GIF",
            "trending_datetime": "0000-00-00 00:00:00",
            "type": "gif",
            "url": "https://giphy.com/gifs/k-kindergarten-behTrfrYhb3iw",
            "username": "",
          },
          "height": 108,
        },
        Object {
          "content": Object {
            "_score": 279.7735,
            "analytics": Object {
              "onclick": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=UjnhpSLrFkrhC&action_type=CLICK",
              },
              "onload": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=UjnhpSLrFkrhC&action_type=SEEN",
              },
              "onsent": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=UjnhpSLrFkrhC&action_type=SENT",
              },
            },
            "bitly_gif_url": "https://gph.is/1ZiUOTy",
            "bitly_url": "https://gph.is/1ZiUOTy",
            "content_url": "",
            "embed_url": "https://giphy.com/embed/UjnhpSLrFkrhC",
            "id": "UjnhpSLrFkrhC",
            "images": Object {
              "480w_still": Object {
                "height": "417",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/480w_s.jpg",
                "width": "480",
              },
              "downsized": Object {
                "height": "217",
                "size": "1335237",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-downsized.gif",
                "width": "250",
              },
              "downsized_large": Object {
                "height": "311",
                "size": "2575899",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.gif",
                "width": "358",
              },
              "downsized_medium": Object {
                "height": "311",
                "size": "2575899",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.gif",
                "width": "358",
              },
              "downsized_small": Object {
                "height": "242",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-downsized-small.mp4",
                "mp4_size": "161014",
                "width": "279",
              },
              "downsized_still": Object {
                "height": "217",
                "size": "29253",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-downsized_s.gif",
                "width": "250",
              },
              "fixed_height": Object {
                "height": "200",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200.mp4",
                "mp4_size": "87353",
                "size": "1145002",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200.webp",
                "webp_size": "561302",
                "width": "230",
              },
              "fixed_height_downsampled": Object {
                "height": "200",
                "size": "160708",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200_d.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200_d.webp",
                "webp_size": "77904",
                "width": "230",
              },
              "fixed_height_small": Object {
                "height": "100",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100.mp4",
                "mp4_size": "27928",
                "size": "342732",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100.webp",
                "webp_size": "179382",
                "width": "115",
              },
              "fixed_height_small_still": Object {
                "height": "100",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100_s.gif",
                "width": "115",
              },
              "fixed_height_still": Object {
                "height": "200",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200_s.gif",
                "width": "230",
              },
              "fixed_width": Object {
                "height": "174",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w.mp4",
                "mp4_size": "66261",
                "size": "882934",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w.webp",
                "webp_size": "443638",
                "width": "200",
              },
              "fixed_width_downsampled": Object {
                "height": "174",
                "size": "124626",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w_d.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w_d.webp",
                "webp_size": "61876",
                "width": "200",
              },
              "fixed_width_small": Object {
                "height": "87",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100w.mp4",
                "mp4_size": "21428",
                "size": "271044",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100w.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100w.webp",
                "webp_size": "141746",
                "width": "100",
              },
              "fixed_width_small_still": Object {
                "height": "87",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100w_s.gif",
                "width": "100",
              },
              "fixed_width_still": Object {
                "height": "174",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w_s.gif",
                "width": "200",
              },
              "looping": Object {
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-loop.mp4",
                "mp4_size": "1447634",
              },
              "original": Object {
                "frames": "45",
                "height": "311",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.mp4",
                "mp4_size": "389307",
                "size": "2575899",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.webp",
                "webp_size": "1249136",
                "width": "358",
              },
              "original_mp4": Object {
                "height": "416",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.mp4",
                "mp4_size": "389307",
                "width": "480",
              },
              "original_still": Object {
                "height": "311",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy_s.gif",
                "width": "358",
              },
              "preview": Object {
                "height": "198",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-preview.mp4",
                "mp4_size": "48324",
                "width": "230",
              },
              "preview_gif": Object {
                "height": "85",
                "size": "48113",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-preview.gif",
                "width": "98",
              },
              "preview_webp": Object {
                "height": "124",
                "size": "48580",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-preview.webp",
                "width": "143",
              },
            },
            "import_datetime": "2016-01-12 20:54:44",
            "is_sticker": 0,
            "rating": "g",
            "slug": "k-illers-UjnhpSLrFkrhC",
            "source": "https://www.reddit.com/r/K_gifs/comments/2upqom/the_killers/",
            "source_post_url": "https://www.reddit.com/r/K_gifs/comments/2upqom/the_killers/",
            "source_tld": "www.reddit.com",
            "title": "k GIF",
            "trending_datetime": "0000-00-00 00:00:00",
            "type": "gif",
            "url": "https://giphy.com/gifs/k-illers-UjnhpSLrFkrhC",
            "username": "",
          },
          "height": 174,
        },
      ]
    }
    renderItem={[Function]}
  />
</div>
`;

exports[`SearchResults should be rendered correctly when it is loading 1`] = `<Spinner />`;

exports[`SearchResults should be rendered correctly when it is not loading 1`] = `
<div
  className="mb-3"
>
  <MasonryGrid
    columnsNum={3}
    items={
      Array [
        Object {
          "content": Object {
            "_score": 298.40634,
            "analytics": Object {
              "onclick": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=3o6UBlHJQT19wSgJQk&action_type=CLICK",
              },
              "onload": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=3o6UBlHJQT19wSgJQk&action_type=SEEN",
              },
              "onsent": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=3o6UBlHJQT19wSgJQk&action_type=SENT",
              },
            },
            "bitly_gif_url": "https://gph.is/1ZiPWOg",
            "bitly_url": "https://gph.is/1ZiPWOg",
            "content_url": "",
            "embed_url": "https://giphy.com/embed/3o6UBlHJQT19wSgJQk",
            "id": "3o6UBlHJQT19wSgJQk",
            "images": Object {
              "480w_still": Object {
                "height": "360",
                "url": "https://media4.giphy.com/media/3o6UBlHJQT19wSgJQk/480w_s.jpg",
                "width": "480",
              },
              "downsized": Object {
                "height": "187",
                "size": "1551019",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-downsized.gif",
                "width": "250",
              },
              "downsized_large": Object {
                "height": "240",
                "size": "2512686",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.gif",
                "width": "320",
              },
              "downsized_medium": Object {
                "height": "240",
                "size": "2512686",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.gif",
                "width": "320",
              },
              "downsized_small": Object {
                "height": "240",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-downsized-small.mp4",
                "mp4_size": "85141",
                "width": "320",
              },
              "downsized_still": Object {
                "height": "187",
                "size": "20803",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-downsized_s.gif",
                "width": "250",
              },
              "fixed_height": Object {
                "height": "200",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200.mp4",
                "mp4_size": "48732",
                "size": "1763793",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200.webp",
                "webp_size": "416708",
                "width": "267",
              },
              "fixed_height_downsampled": Object {
                "height": "200",
                "size": "163498",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200_d.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200_d.webp",
                "webp_size": "63158",
                "width": "267",
              },
              "fixed_height_small": Object {
                "height": "100",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100.mp4",
                "mp4_size": "20844",
                "size": "516054",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100.webp",
                "webp_size": "158166",
                "width": "133",
              },
              "fixed_height_small_still": Object {
                "height": "100",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100_s.gif",
                "width": "133",
              },
              "fixed_height_still": Object {
                "height": "200",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200_s.gif",
                "width": "267",
              },
              "fixed_width": Object {
                "height": "150",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w.mp4",
                "mp4_size": "33202",
                "size": "1028723",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w.webp",
                "webp_size": "273852",
                "width": "200",
              },
              "fixed_width_downsampled": Object {
                "height": "150",
                "size": "93903",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w_d.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w_d.webp",
                "webp_size": "39922",
                "width": "200",
              },
              "fixed_width_small": Object {
                "height": "75",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w.mp4",
                "mp4_size": "14167",
                "size": "339068",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w.webp",
                "webp_size": "108598",
                "width": "100",
              },
              "fixed_width_small_still": Object {
                "height": "75",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w_s.gif",
                "width": "100",
              },
              "fixed_width_still": Object {
                "height": "150",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w_s.gif",
                "width": "200",
              },
              "looping": Object {
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-loop.mp4",
                "mp4_size": "852512",
              },
              "original": Object {
                "frames": "64",
                "height": "240",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.mp4",
                "mp4_size": "125289",
                "size": "2512686",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.gif",
                "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.webp",
                "webp_size": "621576",
                "width": "320",
              },
              "original_mp4": Object {
                "height": "360",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.mp4",
                "mp4_size": "125289",
                "width": "480",
              },
              "original_still": Object {
                "height": "240",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy_s.gif",
                "width": "320",
              },
              "preview": Object {
                "height": "192",
                "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-preview.mp4",
                "mp4_size": "23776",
                "width": "256",
              },
              "preview_gif": Object {
                "height": "99",
                "size": "48051",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-preview.gif",
                "width": "132",
              },
              "preview_webp": Object {
                "height": "184",
                "size": "49824",
                "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-preview.webp",
                "width": "245",
              },
            },
            "import_datetime": "2016-01-12 20:15:44",
            "is_sticker": 0,
            "rating": "g",
            "slug": "k-dancing-3o6UBlHJQT19wSgJQk",
            "source": "",
            "source_post_url": "",
            "source_tld": "",
            "title": "k GIF",
            "trending_datetime": "0000-00-00 00:00:00",
            "type": "gif",
            "url": "https://giphy.com/gifs/k-dancing-3o6UBlHJQT19wSgJQk",
            "username": "",
          },
          "height": 150,
        },
        Object {
          "content": Object {
            "_score": 285.9092,
            "analytics": Object {
              "onclick": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=RLCSAx4DQEJb2&action_type=CLICK",
              },
              "onload": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=RLCSAx4DQEJb2&action_type=SEEN",
              },
              "onsent": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=RLCSAx4DQEJb2&action_type=SENT",
              },
            },
            "bitly_gif_url": "https://gph.is/1ZYR9g1",
            "bitly_url": "https://gph.is/1ZYR9g1",
            "content_url": "",
            "embed_url": "https://giphy.com/embed/RLCSAx4DQEJb2",
            "id": "RLCSAx4DQEJb2",
            "images": Object {
              "480w_still": Object {
                "height": "270",
                "url": "https://media0.giphy.com/media/RLCSAx4DQEJb2/480w_s.jpg",
                "width": "480",
              },
              "downsized": Object {
                "height": "140",
                "size": "1021046",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-downsized.gif",
                "width": "250",
              },
              "downsized_large": Object {
                "height": "288",
                "size": "6511744",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-downsized-large.gif",
                "width": "512",
              },
              "downsized_medium": Object {
                "height": "230",
                "size": "3871669",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-downsized-medium.gif",
                "width": "409",
              },
              "downsized_small": Object {
                "height": "288",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-downsized-small.mp4",
                "mp4_size": "86923",
                "width": "512",
              },
              "downsized_still": Object {
                "height": "140",
                "size": "28302",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-downsized_s.gif",
                "width": "250",
              },
              "fixed_height": Object {
                "height": "200",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200.mp4",
                "mp4_size": "42596",
                "size": "5449703",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200.webp",
                "webp_size": "744010",
                "width": "356",
              },
              "fixed_height_downsampled": Object {
                "height": "200",
                "size": "255681",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200_d.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200_d.webp",
                "webp_size": "28480",
                "width": "356",
              },
              "fixed_height_small": Object {
                "height": "100",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100.mp4",
                "mp4_size": "19023",
                "size": "1403753",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100.webp",
                "webp_size": "295778",
                "width": "178",
              },
              "fixed_height_small_still": Object {
                "height": "100",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100_s.gif",
                "width": "178",
              },
              "fixed_height_still": Object {
                "height": "200",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200_s.gif",
                "width": "356",
              },
              "fixed_width": Object {
                "height": "113",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w.mp4",
                "mp4_size": "19139",
                "size": "1608695",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w.webp",
                "webp_size": "348174",
                "width": "200",
              },
              "fixed_width_downsampled": Object {
                "height": "113",
                "size": "83765",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w_d.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w_d.webp",
                "webp_size": "13406",
                "width": "200",
              },
              "fixed_width_small": Object {
                "height": "56",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100w.mp4",
                "mp4_size": "10590",
                "size": "421229",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100w.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100w.webp",
                "webp_size": "139152",
                "width": "100",
              },
              "fixed_width_small_still": Object {
                "height": "56",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/100w_s.gif",
                "width": "100",
              },
              "fixed_width_still": Object {
                "height": "113",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/200w_s.gif",
                "width": "200",
              },
              "looping": Object {
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-loop.mp4",
                "mp4_size": "159822",
              },
              "original": Object {
                "frames": "170",
                "height": "288",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy.mp4",
                "mp4_size": "55056",
                "size": "11597306",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy.gif",
                "webp": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy.webp",
                "webp_size": "1311256",
                "width": "512",
              },
              "original_mp4": Object {
                "height": "270",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy.mp4",
                "mp4_size": "55056",
                "width": "480",
              },
              "original_still": Object {
                "height": "288",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy_s.gif",
                "width": "512",
              },
              "preview": Object {
                "height": "288",
                "mp4": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-preview.mp4",
                "mp4_size": "30164",
                "width": "512",
              },
              "preview_gif": Object {
                "height": "78",
                "size": "44428",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-preview.gif",
                "width": "139",
              },
              "preview_webp": Object {
                "height": "179",
                "size": "48772",
                "url": "https://media2.giphy.com/media/RLCSAx4DQEJb2/giphy-preview.webp",
                "width": "318",
              },
            },
            "import_datetime": "2016-01-12 20:53:57",
            "is_sticker": 0,
            "rating": "g",
            "slug": "k-don-RLCSAx4DQEJb2",
            "source": "https://www.reddit.com/r/K_gifs/comments/3rg30r/don_k/",
            "source_post_url": "https://www.reddit.com/r/K_gifs/comments/3rg30r/don_k/",
            "source_tld": "www.reddit.com",
            "title": "k GIF",
            "trending_datetime": "0000-00-00 00:00:00",
            "type": "gif",
            "url": "https://giphy.com/gifs/k-don-RLCSAx4DQEJb2",
            "username": "",
          },
          "height": 113,
        },
        Object {
          "content": Object {
            "_score": 282.85458,
            "analytics": Object {
              "onclick": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=e63jUdmBlfmec&action_type=CLICK",
              },
              "onload": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=e63jUdmBlfmec&action_type=SEEN",
              },
              "onsent": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=e63jUdmBlfmec&action_type=SENT",
              },
            },
            "bitly_gif_url": "https://gph.is/1ZYRbVc",
            "bitly_url": "https://gph.is/1ZYRbVc",
            "content_url": "",
            "embed_url": "https://giphy.com/embed/e63jUdmBlfmec",
            "id": "e63jUdmBlfmec",
            "images": Object {
              "480w_still": Object {
                "height": "387",
                "url": "https://media1.giphy.com/media/e63jUdmBlfmec/480w_s.jpg",
                "width": "480",
              },
              "downsized": Object {
                "height": "201",
                "size": "1179164",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-downsized.gif",
                "width": "250",
              },
              "downsized_large": Object {
                "height": "258",
                "size": "5999328",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy.gif",
                "width": "320",
              },
              "downsized_medium": Object {
                "height": "258",
                "size": "2864521",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-downsized-medium.gif",
                "width": "320",
              },
              "downsized_small": Object {
                "height": "258",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-downsized-small.mp4",
                "mp4_size": "110309",
                "width": "320",
              },
              "downsized_still": Object {
                "height": "201",
                "size": "23859",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-downsized_s.gif",
                "width": "250",
              },
              "fixed_height": Object {
                "height": "200",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/200.mp4",
                "mp4_size": "51073",
                "size": "3484959",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/200.webp",
                "webp_size": "1033918",
                "width": "248",
              },
              "fixed_height_downsampled": Object {
                "height": "200",
                "size": "127673",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200_d.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/200_d.webp",
                "webp_size": "36662",
                "width": "248",
              },
              "fixed_height_small": Object {
                "height": "100",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/100.mp4",
                "mp4_size": "24324",
                "size": "967796",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/100.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/100.webp",
                "webp_size": "404842",
                "width": "124",
              },
              "fixed_height_small_still": Object {
                "height": "100",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/100_s.gif",
                "width": "124",
              },
              "fixed_height_still": Object {
                "height": "200",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200_s.gif",
                "width": "248",
              },
              "fixed_width": Object {
                "height": "161",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/200w.mp4",
                "mp4_size": "51315",
                "size": "2213033",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200w.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/200w.webp",
                "webp_size": "778462",
                "width": "200",
              },
              "fixed_width_downsampled": Object {
                "height": "161",
                "size": "81345",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200w_d.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/200w_d.webp",
                "webp_size": "27734",
                "width": "200",
              },
              "fixed_width_small": Object {
                "height": "81",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/100w.mp4",
                "mp4_size": "27353",
                "size": "648179",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/100w.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/100w.webp",
                "webp_size": "300596",
                "width": "100",
              },
              "fixed_width_small_still": Object {
                "height": "81",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/100w_s.gif",
                "width": "100",
              },
              "fixed_width_still": Object {
                "height": "161",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/200w_s.gif",
                "width": "200",
              },
              "looping": Object {
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-loop.mp4",
                "mp4_size": "304086",
              },
              "original": Object {
                "frames": "168",
                "height": "258",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy.mp4",
                "mp4_size": "149290",
                "size": "5999328",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy.gif",
                "webp": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy.webp",
                "webp_size": "1581878",
                "width": "320",
              },
              "original_mp4": Object {
                "height": "386",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy.mp4",
                "mp4_size": "149290",
                "width": "480",
              },
              "original_still": Object {
                "height": "258",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy_s.gif",
                "width": "320",
              },
              "preview": Object {
                "height": "258",
                "mp4": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-preview.mp4",
                "mp4_size": "27198",
                "width": "320",
              },
              "preview_gif": Object {
                "height": "98",
                "size": "47857",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-preview.gif",
                "width": "122",
              },
              "preview_webp": Object {
                "height": "184",
                "size": "48450",
                "url": "https://media3.giphy.com/media/e63jUdmBlfmec/giphy-preview.webp",
                "width": "228",
              },
            },
            "import_datetime": "2016-01-12 20:54:08",
            "is_sticker": 0,
            "rating": "g",
            "slug": "k-e63jUdmBlfmec",
            "source": "https://www.reddit.com/r/K_gifs/comments/3831sp/it_eksploded/",
            "source_post_url": "https://www.reddit.com/r/K_gifs/comments/3831sp/it_eksploded/",
            "source_tld": "www.reddit.com",
            "title": "k GIF",
            "trending_datetime": "0000-00-00 00:00:00",
            "type": "gif",
            "url": "https://giphy.com/gifs/k-e63jUdmBlfmec",
            "username": "",
          },
          "height": 161,
        },
        Object {
          "content": Object {
            "_score": 280.29596,
            "analytics": Object {
              "onclick": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=behTrfrYhb3iw&action_type=CLICK",
              },
              "onload": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=behTrfrYhb3iw&action_type=SEEN",
              },
              "onsent": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=behTrfrYhb3iw&action_type=SENT",
              },
            },
            "bitly_gif_url": "https://gph.is/1JIMtqu",
            "bitly_url": "https://gph.is/1JIMtqu",
            "content_url": "",
            "embed_url": "https://giphy.com/embed/behTrfrYhb3iw",
            "id": "behTrfrYhb3iw",
            "images": Object {
              "480w_still": Object {
                "height": "260",
                "url": "https://media0.giphy.com/media/behTrfrYhb3iw/480w_s.jpg",
                "width": "480",
              },
              "downsized": Object {
                "height": "135",
                "size": "1129202",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-downsized.gif",
                "width": "250",
              },
              "downsized_large": Object {
                "height": "303",
                "size": "5643470",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-downsized-large.gif",
                "width": "560",
              },
              "downsized_medium": Object {
                "height": "277",
                "size": "4663463",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-downsized-medium.gif",
                "width": "512",
              },
              "downsized_small": Object {
                "height": "340",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-downsized-small.mp4",
                "mp4_size": "175065",
                "width": "629",
              },
              "downsized_still": Object {
                "height": "135",
                "size": "25096",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-downsized_s.gif",
                "width": "250",
              },
              "fixed_height": Object {
                "height": "200",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/200.mp4",
                "mp4_size": "73512",
                "size": "2264846",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/200.webp",
                "webp_size": "891620",
                "width": "369",
              },
              "fixed_height_downsampled": Object {
                "height": "200",
                "size": "263649",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200_d.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/200_d.webp",
                "webp_size": "87124",
                "width": "369",
              },
              "fixed_height_small": Object {
                "height": "100",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/100.mp4",
                "mp4_size": "30272",
                "size": "600352",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/100.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/100.webp",
                "webp_size": "330018",
                "width": "185",
              },
              "fixed_height_small_still": Object {
                "height": "100",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/100_s.gif",
                "width": "185",
              },
              "fixed_height_still": Object {
                "height": "200",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200_s.gif",
                "width": "369",
              },
              "fixed_width": Object {
                "height": "108",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/200w.mp4",
                "mp4_size": "33116",
                "size": "646368",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200w.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/200w.webp",
                "webp_size": "362994",
                "width": "200",
              },
              "fixed_width_downsampled": Object {
                "height": "108",
                "size": "88164",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200w_d.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/200w_d.webp",
                "webp_size": "35400",
                "width": "200",
              },
              "fixed_width_small": Object {
                "height": "54",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/100w.mp4",
                "mp4_size": "14318",
                "size": "183023",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/100w.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/100w.webp",
                "webp_size": "139120",
                "width": "100",
              },
              "fixed_width_small_still": Object {
                "height": "54",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/100w_s.gif",
                "width": "100",
              },
              "fixed_width_still": Object {
                "height": "108",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/200w_s.gif",
                "width": "200",
              },
              "looping": Object {
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-loop.mp4",
                "mp4_size": "697963",
              },
              "original": Object {
                "frames": "61",
                "height": "379",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy.mp4",
                "mp4_size": "107548",
                "size": "9161516",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy.gif",
                "webp": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy.webp",
                "webp_size": "2677548",
                "width": "700",
              },
              "original_mp4": Object {
                "height": "258",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy.mp4",
                "mp4_size": "107548",
                "width": "480",
              },
              "original_still": Object {
                "height": "379",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy_s.gif",
                "width": "700",
              },
              "preview": Object {
                "height": "210",
                "mp4": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-preview.mp4",
                "mp4_size": "33695",
                "width": "392",
              },
              "preview_gif": Object {
                "height": "72",
                "size": "49615",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-preview.gif",
                "width": "133",
              },
              "preview_webp": Object {
                "height": "98",
                "size": "48988",
                "url": "https://media3.giphy.com/media/behTrfrYhb3iw/giphy-preview.webp",
                "width": "181",
              },
            },
            "import_datetime": "2016-01-12 20:57:32",
            "is_sticker": 0,
            "rating": "g",
            "slug": "k-kindergarten-behTrfrYhb3iw",
            "source": "https://www.reddit.com/r/K_gifs/comments/2eub3p/kindergarten_kop/",
            "source_post_url": "https://www.reddit.com/r/K_gifs/comments/2eub3p/kindergarten_kop/",
            "source_tld": "www.reddit.com",
            "title": "k GIF",
            "trending_datetime": "0000-00-00 00:00:00",
            "type": "gif",
            "url": "https://giphy.com/gifs/k-kindergarten-behTrfrYhb3iw",
            "username": "",
          },
          "height": 108,
        },
        Object {
          "content": Object {
            "_score": 279.7735,
            "analytics": Object {
              "onclick": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=UjnhpSLrFkrhC&action_type=CLICK",
              },
              "onload": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=UjnhpSLrFkrhC&action_type=SEEN",
              },
              "onsent": Object {
                "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=UjnhpSLrFkrhC&action_type=SENT",
              },
            },
            "bitly_gif_url": "https://gph.is/1ZiUOTy",
            "bitly_url": "https://gph.is/1ZiUOTy",
            "content_url": "",
            "embed_url": "https://giphy.com/embed/UjnhpSLrFkrhC",
            "id": "UjnhpSLrFkrhC",
            "images": Object {
              "480w_still": Object {
                "height": "417",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/480w_s.jpg",
                "width": "480",
              },
              "downsized": Object {
                "height": "217",
                "size": "1335237",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-downsized.gif",
                "width": "250",
              },
              "downsized_large": Object {
                "height": "311",
                "size": "2575899",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.gif",
                "width": "358",
              },
              "downsized_medium": Object {
                "height": "311",
                "size": "2575899",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.gif",
                "width": "358",
              },
              "downsized_small": Object {
                "height": "242",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-downsized-small.mp4",
                "mp4_size": "161014",
                "width": "279",
              },
              "downsized_still": Object {
                "height": "217",
                "size": "29253",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-downsized_s.gif",
                "width": "250",
              },
              "fixed_height": Object {
                "height": "200",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200.mp4",
                "mp4_size": "87353",
                "size": "1145002",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200.webp",
                "webp_size": "561302",
                "width": "230",
              },
              "fixed_height_downsampled": Object {
                "height": "200",
                "size": "160708",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200_d.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200_d.webp",
                "webp_size": "77904",
                "width": "230",
              },
              "fixed_height_small": Object {
                "height": "100",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100.mp4",
                "mp4_size": "27928",
                "size": "342732",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100.webp",
                "webp_size": "179382",
                "width": "115",
              },
              "fixed_height_small_still": Object {
                "height": "100",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100_s.gif",
                "width": "115",
              },
              "fixed_height_still": Object {
                "height": "200",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200_s.gif",
                "width": "230",
              },
              "fixed_width": Object {
                "height": "174",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w.mp4",
                "mp4_size": "66261",
                "size": "882934",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w.webp",
                "webp_size": "443638",
                "width": "200",
              },
              "fixed_width_downsampled": Object {
                "height": "174",
                "size": "124626",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w_d.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w_d.webp",
                "webp_size": "61876",
                "width": "200",
              },
              "fixed_width_small": Object {
                "height": "87",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100w.mp4",
                "mp4_size": "21428",
                "size": "271044",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100w.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100w.webp",
                "webp_size": "141746",
                "width": "100",
              },
              "fixed_width_small_still": Object {
                "height": "87",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/100w_s.gif",
                "width": "100",
              },
              "fixed_width_still": Object {
                "height": "174",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/200w_s.gif",
                "width": "200",
              },
              "looping": Object {
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-loop.mp4",
                "mp4_size": "1447634",
              },
              "original": Object {
                "frames": "45",
                "height": "311",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.mp4",
                "mp4_size": "389307",
                "size": "2575899",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.gif",
                "webp": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.webp",
                "webp_size": "1249136",
                "width": "358",
              },
              "original_mp4": Object {
                "height": "416",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy.mp4",
                "mp4_size": "389307",
                "width": "480",
              },
              "original_still": Object {
                "height": "311",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy_s.gif",
                "width": "358",
              },
              "preview": Object {
                "height": "198",
                "mp4": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-preview.mp4",
                "mp4_size": "48324",
                "width": "230",
              },
              "preview_gif": Object {
                "height": "85",
                "size": "48113",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-preview.gif",
                "width": "98",
              },
              "preview_webp": Object {
                "height": "124",
                "size": "48580",
                "url": "https://media0.giphy.com/media/UjnhpSLrFkrhC/giphy-preview.webp",
                "width": "143",
              },
            },
            "import_datetime": "2016-01-12 20:54:44",
            "is_sticker": 0,
            "rating": "g",
            "slug": "k-illers-UjnhpSLrFkrhC",
            "source": "https://www.reddit.com/r/K_gifs/comments/2upqom/the_killers/",
            "source_post_url": "https://www.reddit.com/r/K_gifs/comments/2upqom/the_killers/",
            "source_tld": "www.reddit.com",
            "title": "k GIF",
            "trending_datetime": "0000-00-00 00:00:00",
            "type": "gif",
            "url": "https://giphy.com/gifs/k-illers-UjnhpSLrFkrhC",
            "username": "",
          },
          "height": 174,
        },
      ]
    }
    renderItem={[Function]}
  />
</div>
`;

exports[`SearchResults should be rendered correctly with empty results array 1`] = `
<div
  className="mb-3"
>
  <MasonryGrid
    columnsNum={3}
    items={Array []}
    renderItem={[Function]}
  />
</div>
`;

exports[`SearchResults should render search item correctly 1`] = `
<SearchItem
  item={
    Object {
      "_score": 298.40634,
      "analytics": Object {
        "onclick": Object {
          "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=3o6UBlHJQT19wSgJQk&action_type=CLICK",
        },
        "onload": Object {
          "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=3o6UBlHJQT19wSgJQk&action_type=SEEN",
        },
        "onsent": Object {
          "url": "https://giphy_analytics.giphy.com/simple_analytics?response_id=5c4911e7586b446a4127532c&event_type=GIF_SEARCH&gif_id=3o6UBlHJQT19wSgJQk&action_type=SENT",
        },
      },
      "bitly_gif_url": "https://gph.is/1ZiPWOg",
      "bitly_url": "https://gph.is/1ZiPWOg",
      "content_url": "",
      "embed_url": "https://giphy.com/embed/3o6UBlHJQT19wSgJQk",
      "id": "3o6UBlHJQT19wSgJQk",
      "images": Object {
        "480w_still": Object {
          "height": "360",
          "url": "https://media4.giphy.com/media/3o6UBlHJQT19wSgJQk/480w_s.jpg",
          "width": "480",
        },
        "downsized": Object {
          "height": "187",
          "size": "1551019",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-downsized.gif",
          "width": "250",
        },
        "downsized_large": Object {
          "height": "240",
          "size": "2512686",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.gif",
          "width": "320",
        },
        "downsized_medium": Object {
          "height": "240",
          "size": "2512686",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.gif",
          "width": "320",
        },
        "downsized_small": Object {
          "height": "240",
          "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-downsized-small.mp4",
          "mp4_size": "85141",
          "width": "320",
        },
        "downsized_still": Object {
          "height": "187",
          "size": "20803",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-downsized_s.gif",
          "width": "250",
        },
        "fixed_height": Object {
          "height": "200",
          "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200.mp4",
          "mp4_size": "48732",
          "size": "1763793",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200.gif",
          "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200.webp",
          "webp_size": "416708",
          "width": "267",
        },
        "fixed_height_downsampled": Object {
          "height": "200",
          "size": "163498",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200_d.gif",
          "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200_d.webp",
          "webp_size": "63158",
          "width": "267",
        },
        "fixed_height_small": Object {
          "height": "100",
          "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100.mp4",
          "mp4_size": "20844",
          "size": "516054",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100.gif",
          "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100.webp",
          "webp_size": "158166",
          "width": "133",
        },
        "fixed_height_small_still": Object {
          "height": "100",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100_s.gif",
          "width": "133",
        },
        "fixed_height_still": Object {
          "height": "200",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200_s.gif",
          "width": "267",
        },
        "fixed_width": Object {
          "height": "150",
          "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w.mp4",
          "mp4_size": "33202",
          "size": "1028723",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w.gif",
          "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w.webp",
          "webp_size": "273852",
          "width": "200",
        },
        "fixed_width_downsampled": Object {
          "height": "150",
          "size": "93903",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w_d.gif",
          "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w_d.webp",
          "webp_size": "39922",
          "width": "200",
        },
        "fixed_width_small": Object {
          "height": "75",
          "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w.mp4",
          "mp4_size": "14167",
          "size": "339068",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w.gif",
          "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w.webp",
          "webp_size": "108598",
          "width": "100",
        },
        "fixed_width_small_still": Object {
          "height": "75",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/100w_s.gif",
          "width": "100",
        },
        "fixed_width_still": Object {
          "height": "150",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/200w_s.gif",
          "width": "200",
        },
        "looping": Object {
          "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-loop.mp4",
          "mp4_size": "852512",
        },
        "original": Object {
          "frames": "64",
          "height": "240",
          "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.mp4",
          "mp4_size": "125289",
          "size": "2512686",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.gif",
          "webp": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.webp",
          "webp_size": "621576",
          "width": "320",
        },
        "original_mp4": Object {
          "height": "360",
          "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy.mp4",
          "mp4_size": "125289",
          "width": "480",
        },
        "original_still": Object {
          "height": "240",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy_s.gif",
          "width": "320",
        },
        "preview": Object {
          "height": "192",
          "mp4": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-preview.mp4",
          "mp4_size": "23776",
          "width": "256",
        },
        "preview_gif": Object {
          "height": "99",
          "size": "48051",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-preview.gif",
          "width": "132",
        },
        "preview_webp": Object {
          "height": "184",
          "size": "49824",
          "url": "https://media0.giphy.com/media/3o6UBlHJQT19wSgJQk/giphy-preview.webp",
          "width": "245",
        },
      },
      "import_datetime": "2016-01-12 20:15:44",
      "is_sticker": 0,
      "rating": "g",
      "slug": "k-dancing-3o6UBlHJQT19wSgJQk",
      "source": "",
      "source_post_url": "",
      "source_tld": "",
      "title": "k GIF",
      "trending_datetime": "0000-00-00 00:00:00",
      "type": "gif",
      "url": "https://giphy.com/gifs/k-dancing-3o6UBlHJQT19wSgJQk",
      "username": "",
    }
  }
/>
`;
